@@ -1,6 +1,6 @@
 DIST ee-1.4.6.src.tgz 70511 RMD160 2ed8ad3123c5443b29f5db142ad367d67028da27 SHA1 6be7d03eade441a6c409b9d441ba2c144e26b157 SHA256 a85362dbc24c2bd0f675093fb593ba347b471749c0a0dbefdc75b6334a7b6e4c
 DIST ee-1.4.7.src.tgz 70936 RMD160 03ecef414431c6bcfae8564516322519dc0341c3 SHA1 0604b204f3c8735e9d4018a813c36b613feb5451 SHA256 f53010c69258b1b5a65870afe1938134bec01bb1f605b890ca474bcb03265189
 EBUILD easyedit-1.4.6.ebuild 871 RMD160 44f9c007bb06687d0d27a82618e6ca45839dba23 SHA1 ffcd558927ce783c26c46f07bc97560c21476511 SHA256 9f2cc3664aecdb8691aec00316c871adfdba6e4f34016b9436e6630dc06dc4d8
-EBUILD easyedit-1.4.7.ebuild 928 RMD160 a5e181f9f9af2521cae87cbc834b50ec1826edfd SHA1 fa1a6c350f57a28bc08ab20d0c03259803fe4d47 SHA256 b90be6994ff08c67b12260cccb9dc5ef47d84356a9669b13282c51da7780f830
-MISC ChangeLog 2160 RMD160 1dd18d0b645044c1483a47f0fc1ca6fbf31a73dc SHA1 b649c561dcf4dda15356732d8c6ee8e8c00f362f SHA256 00108e4080903e913394b3933337bea834b7390298ea3c5be4f415799d006415
+EBUILD easyedit-1.4.7.ebuild 944 RMD160 3306047613c892e6b138d4f7658d1cdab888fead SHA1 d221a48c0f46055c6e445d82c40d094a3ccfa7a8 SHA256 89863702b44f42cef8b00a70bbff7b6fa50b81999eee825541ef0bcfce970c5a
+MISC ChangeLog 2266 RMD160 b7bfd696fefe2f97b73a219090bfc4c2c0fe7ed5 SHA1 db6c0162dcb47a539f08e60376db80ffa8e35b6d SHA256 609f6b0a3f010dab07f2d63aeb487e3fbee5e4cf55cdb73d28363650c1b31c86
 MISC metadata.xml 230 RMD160 8e45109dbaf3c193afdb318002c1def7cb62dfa1 SHA1 9bd7aea9376c216b3f55303d1334a337cd6f06a2 SHA256 87fc07a55ee7814a0505ae1c24a871ac29ae7691c5383550647382a2b26277ae
